--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -17,7 +17,7 @@ jobs:
         uses: docker/metadata-action@v4
         with:
           images: |
-            hungdv136/rio
+            manabie-com/rio
           flavor: |
             latest=false
           tags: |
