--- a/docker/compose.yaml
+++ b/docker/compose.yaml
@@ -1,8 +1,8 @@
-version: '3.9'
+version: "3.9"
 
 services:
   rio:
-    image: hungdv136/rio:v1.2.3
+    image: manabie-com/rio:v1.2.3
     pull_policy: always
     healthcheck:
       test: curl --fail http://localhost:8896/ping || exit 1
@@ -29,8 +29,8 @@ services:
     depends_on:
       - db
 
- # This is for testing purpose since data are not persistent
- # You should mount data accordingly when deploying on your testing environment
+  # This is for testing purpose since data are not persistent
+  # You should mount data accordingly when deploying on your testing environment
   db:
     image: mysql:8.0.18
     environment:
